// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading className 1`] = `
<div>
  <div
    class="sc-bdVaJa jjICzf cbsama show"
  >
    <div
      class="dot"
    />
    <div
      class="dot"
    />
    <div
      class="dot"
    />
    <div
      class="dot"
    />
    <div
      class="dot"
    />
  </div>
</div>
`;

exports[`Loading loading 1`] = `
<div>
  <div
    class="sc-bdVaJa jjICzf show"
  >
    <div
      class="dot"
    />
    <div
      class="dot"
    />
    <div
      class="dot"
    />
    <div
      class="dot"
    />
    <div
      class="dot"
    />
  </div>
</div>
`;

exports[`Loading no loading 1`] = `
<div>
  <div
    class="sc-bdVaJa jjICzf"
  >
    <div
      class="dot"
    />
    <div
      class="dot"
    />
    <div
      class="dot"
    />
    <div
      class="dot"
    />
    <div
      class="dot"
    />
  </div>
</div>
`;
